Avoid materialization of `VirtualActionInput`s with remote execution
This is achieved via an adapter from `DeterministicWriter` to `InputStream` that internally uses `jdk.internal.vm.Continuation` to have the `OutputStream` write into a fixed-size ring buffer.